fixing problem where logo image stretches off screen and stuff

--- a/index.css
+++ b/index.css
@@ -53,8 +53,8 @@ body{
 
 @media all and (max-width: 366px) {
   #logoImgContainer img{
-      max-width: 100%;
-      
+      width: 100%;
+      height: auto;
   }
 }
 
